[package]
name = "kernel-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel-log= {path = "../kernel-log/"}
kernel-cpu = {path = "../../arch/modules/cpu/"}
kernel-shutdown = {path = "../../arch/modules/shutdown/"}
kernel-boot = {path = "../../arch/modules/boot/"}
kernel-boot-interface = {path = "../kernel-boot-interface/"}
