[package]
name = "metamorphoses"
version = "0.1.0"
edition = "2021"
build = "../../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
kernel-cpu = {path = "../../arch/modules/cpu/"}
kernel-test = {path = "../kernel-test/"}
kernel-boot-interface = {path = "../kernel-boot-interface/"}

[build-dependencies]
build-target = "0.4.0"
