[package]
name = "kernel-boot-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = "0.1.10"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}

kernel-cpu = {path = "../../modules/cpu"}
kernel-boot-interface = {path = "../../../lib/kernel-boot-interface"}

